sfdx/force-app/main/default/objects/Stripe_Account__c/Stripe_Account__c.object-meta.xml
<CustomObject>
    <description>Custom object representing a connected Stripe Account.</description>
    <label>Stripe Account</label>
    <nameField>
        <label>Stripe Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>