sfdx/force-app/main/default/objects/Stripe_Account__c/fields/Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>Connection_Status__c</fullName>
    <description>The status of the Stripe Account connection.</description>
    <inlineHelpText>The status of the Stripe Account connection.</inlineHelpText>
    <label>Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>connected</fullName>
                <default>true</default>
                <label>connected</label>
            </value>
            <value>
                <fullName>disconnected</fullName>
            </value>
            <value>
                <fullName>deleted</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>