sfdx/force-app/main/default/objects/Stripe_Account__c/fields/CSAC_ID__c.field-meta.xml
<CustomField>
    <fullName>CSAC_ID__c</fullName>
    <label>Connector Salesforce Account Config Id</label>
    <description>The CSAC of the Stripe Account this record represents.</description>
    <inlineHelpText>The CSAC of the Stripe Account this record represents.</inlineHelpText>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>