sfdx/force-app/main/default/objects/Stripe_Account__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Composite key is a generated, unique key the connector used identify this Stripe Account connection. This is generated by concatenating of the Stripe Account ID and the Stripe Account livemode</description>
    <externalId>true</externalId>
    <inlineHelpText>Composite key is a generated, unique key the connector used identify this Stripe Account connection. This is generated by concatenating of the Stripe Account ID and the Stripe Account livemode</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>