sfdx/force-app/main/default/objects/Stripe_Account__c/fields/Is_Live_Mode__c.field-meta.xml
<CustomField>
    <fullName>Is_Live_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this connection in Live mode?</description>
    <inlineHelpText>Is this connection in Live mode?</inlineHelpText>
    <label>Is Live Mode?</label>
    <type>Checkbox</type>
</CustomField>