sfdx/force-app/main/default/objects/Stripe_Account__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this connection the Primary connection?</description>
    <inlineHelpText>Is this connection the Primary connection?</inlineHelpText>
    <label>Is Primary?</label>
    <type>Checkbox</type>
</CustomField>