sfdx/force-app/main/default/objects/Stripe_Account__c/fields/Stripe_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_ID__c</fullName>
    <label>Stripe Account Id</label>
    <description>The ID of the Stripe Account this record represents.</description>
    <inlineHelpText>The ID of the Stripe Account this record represents.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>